# tmux-browse-qr

./: .gitignore  CHANGELOG.md  LICENSE  README.md  manifest.json  pyproject.toml  qr_routes.py  ui_blocks.html
.github/workflows/: ci.yml
qr/: __init__.py
static/: qr.js
